--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
 
 .container .login{
     background-color: var(--loginbg);
-    padding: 1em;
+    padding: 1.5em 2.5em;
     padding-top: 4em;
     border-radius: 10px;
 }
